tests/fixtures/LatestTests/DynamicVariableTests/errors/dyn_bool_to_decimal.fg
/; EXPECT_ERROR: Runtime Error: Cannot cast Dynamic value to Decimal.
var _bool = true
println(Decimal(_bool))